# Pobi_projekt

./: CMakeLists.txt
program/: CMakeLists.txt
program/src/: main.cpp
